# cesu8_validation

./: .clang-format  CMakeLists.txt  README.md  run_all_tests.sh
benchmark_data/: generate_data.py
benchmark_data/10pct_non_ascii/: random_10pct_length_1024.cesu8  random_10pct_length_1048576.cesu8  random_10pct_length_128.cesu8  random_10pct_length_131072.cesu8  random_10pct_length_16384.cesu8  random_10pct_length_2048.cesu8  random_10pct_length_2097152.cesu8  random_10pct_length_256.cesu8  random_10pct_length_262144.cesu8  random_10pct_length_32768.cesu8  random_10pct_length_4096.cesu8  random_10pct_length_512.cesu8  random_10pct_length_524288.cesu8  random_10pct_length_64.cesu8  random_10pct_length_65536.cesu8  random_10pct_length_8192.cesu8
benchmark_data/ascii/: random_ascii_length_1024.cesu8  random_ascii_length_1048576.cesu8  random_ascii_length_128.cesu8  random_ascii_length_131072.cesu8  random_ascii_length_16384.cesu8  random_ascii_length_2048.cesu8  random_ascii_length_2097152.cesu8  random_ascii_length_256.cesu8  random_ascii_length_262144.cesu8  random_ascii_length_32768.cesu8  random_ascii_length_4096.cesu8  random_ascii_length_512.cesu8  random_ascii_length_524288.cesu8  random_ascii_length_64.cesu8  random_ascii_length_65536.cesu8  random_ascii_length_8192.cesu8
benchmark_data/hangul/: random_ascii_length_1024.cesu8  random_ascii_length_1048576.cesu8  random_ascii_length_131072.cesu8  random_ascii_length_16384.cesu8  random_ascii_length_2097152.cesu8  random_ascii_length_512.cesu8  random_ascii_length_65536.cesu8  random_ascii_length_8192.cesu8  random_hangul_length_1024.cesu8  random_hangul_length_1048576.cesu8  random_hangul_length_128.cesu8  random_hangul_length_131072.cesu8  random_hangul_length_16384.cesu8  random_hangul_length_2048.cesu8  random_hangul_length_2097152.cesu8  random_hangul_length_256.cesu8  random_hangul_length_262144.cesu8  random_hangul_length_32768.cesu8  random_hangul_length_4096.cesu8  random_hangul_length_512.cesu8  random_hangul_length_524288.cesu8  random_hangul_length_64.cesu8  random_hangul_length_65536.cesu8  random_hangul_length_8192.cesu8
benchmark_data/random/: random_random_length_1024.cesu8  random_random_length_1048576.cesu8  random_random_length_128.cesu8  random_random_length_131072.cesu8  random_random_length_16384.cesu8  random_random_length_2048.cesu8  random_random_length_2097152.cesu8  random_random_length_256.cesu8  random_random_length_262144.cesu8  random_random_length_32768.cesu8  random_random_length_4096.cesu8  random_random_length_512.cesu8  random_random_length_524288.cesu8  random_random_length_64.cesu8  random_random_length_65536.cesu8  random_random_length_8192.cesu8
benchmark_results/: README.md  compare_csv.py  process_csv.py
benchmark_results/company/: avx.csv  proc_cpuinfo.txt  scalar.csv  sse.csv
benchmark_results/marco_laptop/: scalar.csv
benchmark_results/private_laptop/: avx.csv  avx2.csv  proc_cpuinfo.txt  scalar.csv  sse.csv
benchmark_results/private_laptop/processed_data/: ascii.csv  avx2.csv  avx512.csv  hangul.csv  random.csv  scalar.csv  sse.csv
benchmark_results/uni/: avx2.csv  avx512.csv  proc_cputinfo.txt  scalar.csv  sse.csv
benchmark_results/uni/processed_data/: ascii.csv  avx2.csv  avx512.csv  hangul.csv  random.csv  scalar.csv  sse.csv
disassembly/: avx2.asm  avx512.asm  readme.MD  scalar.asm  sse.asm
example/: test.utf8
src/: cesu8.hpp  cesu8_AVX.cpp  cesu8_AVX2.cpp  cesu8_AVX512.cpp  cesu8_SSE.cpp  cesu8_common.hpp  cesu8_scalar.cpp  simd_hguards.hpp
src/benchmark/: benchmark_AVX.cpp  benchmark_AVX2.cpp  benchmark_AVX512.cpp  benchmark_SSE.cpp  benchmark_common.hpp  benchmark_scalar.cpp
src/test/: test_AVX.cpp  test_AVX2.cpp  test_AVX512.cpp  test_SSE.cpp  test_common.hpp  test_main.cpp  test_scalar.cpp  test_stats.cpp
src/tools/: cesu8_stats.cpp  cesu8_stats.hpp  common.hpp  utf8_to_cesu8.cpp  utf8_to_cesu8.hpp
